# kyomato

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples-util/: Cargo.toml
examples-util/src/: lib.rs
examples/advanced_ayano/: main.rs  output.tex  test.py
examples/advanced_ayano/data/: 20240327230336_8798.csv  calculations_table.csv  doing_stuff.py  read3.py
examples/advanced_ayano/scripts/: calculate_e.py  generate_sine.py  toshino_kyoko.py
examples/advanced_ayano/source/: input.md
examples/basic_ayano/: input.md  main.rs  output.tex
examples/basic_syntax/: input.md  main.rs  output.tex
src/: data.rs  lexer.rs  lib.rs  path_engine.rs  util.rs
tests/: lex.rs  transform.rs
tests/input_files/: ayano.md  ayano_display_blocks.md  basic.md  deceit.md  edgecases.md  tables_code.md  title_info.md
tests/lex_files/: ayano.txt  ayano_display_blocks.txt  basic.txt  deceit.txt  edgecases.txt  tables_code.txt  title_info.txt
tests/transformed_files/: ayano.txt  ayano_display_blocks.txt  basic.txt  deceit.txt  edgecases.txt  tables_code.txt  title_info.txt
