[package]
name = "kyomato"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]                    # TODO REMOVE AFTER TOKEN REWORK
serde = ["dep:serde", "dep:url_serde"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.48.1"
derive_more = "0.99.17"
itertools = "0.12.1"
nom = "7.1.3"
once_cell = "1.19.0"
pyo3 = { version = "0.20.2", features = ["auto-initialize"] }
rand = "0.8.5"
regex = "1.10.3"
thiserror = "1.0.56"
url = "2.5.0"
serde = { version = "1.0.197", features = ["derive"], optional = true }
url_serde = { version = "0.2.0", optional = true }
smart-default = "0.7.1"

[dev-dependencies]
text-diff = "0.4.0"
nom = { version = "7.1.3", features = ["alloc"] }
